@@ -26,7 +26,7 @@ public class AmazonEcrDelegate {
 
     private final AmazonEcrRepositoryDirver amazonEcrRepositoryDirver;
 
-    @Retryable(value = Exception.class, maxAttempts = 4, backoff = @Backoff(delay = 3000, multiplier = 1.5))
+    @Retryable(retryFor = Exception.class, maxAttempts = 4, backoff = @Backoff(delay = 3000, multiplier = 1.5))
     public List<AmazonEcr.Repository> listRepository(AwsConfig.Aws config) {
         if (CollectionUtils.isEmpty(config.getRegionIds())) {
             return amazonEcrRepositoryDirver.describeRepositories(config.getRegionId(), config).stream().map(e ->
@@ -37,7 +37,7 @@ public class AmazonEcrDelegate {
         for (String regionId : config.getRegionIds()) {
             repositories.addAll(amazonEcrRepositoryDirver.describeRepositories(regionId, config).stream().map(e ->
                     toRepository(regionId, e)
-            ).collect(Collectors.toList()));
+            ).toList());
         }
         return repositories;
     }
